# smplayer-online-word-searching

./: .gitignore  README.md  online_word_searching.py  pyproject.toml  smplayer_sub_search.py
