[tool.poetry]
name = "smplayer-sub-search"
version = "0.1.0"
description = "Embeds SMPlayer into a Qt window to facilitate online dictionary lookups for words in subtitles."
authors = ["kpliuta"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.13"
PySide6 = "^6.7.0"

[tool.poetry.scripts]
smplayer-sub-search = "smplayer_sub_search:main"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"